[gd_scene load_steps=9 format=3 uid="uid://ho04pojmu6cd"]

[ext_resource type="PackedScene" uid="uid://cv08hk7c5qmm3" path="res://scenes/world_locations/garage/model/garage.glb" id="1_fibno"]
[ext_resource type="Script" path="res://scenes/world_locations/garage/garage_scene.gd" id="1_hufk2"]
[ext_resource type="PackedScene" uid="uid://bycbmw7m5gr1o" path="res://scenes/world_locations/garage/garage_tile/tile.tscn" id="2_wy7l3"]
[ext_resource type="Script" path="res://scripts/camera_movement.gd" id="4_4ivjp"]
[ext_resource type="PackedScene" uid="uid://c8v4kw1b3qk6k" path="res://garage_decorations/car_lifts/car_lift_001/car_lift.tscn" id="4_iop7i"]
[ext_resource type="Script" path="res://scripts/camera_raycast_states/default_state.gd" id="6_4fivs"]
[ext_resource type="Script" path="res://scripts/camera_raycast_states/place_object_state.gd" id="6_iriuf"]
[ext_resource type="Script" path="res://scripts/camera_raycast_states/edit_floor_tiles_state.gd" id="8_hispg"]

[node name="GarageScene" type="Node3D"]
script = ExtResource("1_hufk2")

[node name="garage" parent="." instance=ExtResource("1_fibno")]

[node name="Tiles" type="Node3D" parent="." groups=["Persist", "Tile"]]

[node name="Tile" parent="Tiles" instance=ExtResource("2_wy7l3")]
is_unlocked = true

[node name="Tile2" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
visible = false
can_unlock = true

[node name="Tile3" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 0)
visible = false

[node name="Tile4" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 0)
visible = false

[node name="Tile5" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 0)
visible = false

[node name="Tile6" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
visible = false
can_unlock = true

[node name="Tile7" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20)
visible = false

[node name="Tile8" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 20)
visible = false

[node name="Tile9" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 20)
visible = false

[node name="Tile10" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 20)
visible = false

[node name="Tile11" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 40)
visible = false

[node name="Tile12" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 40)
visible = false

[node name="Tile13" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 40)
visible = false

[node name="Tile14" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 40)
visible = false

[node name="Tile15" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 40)
visible = false

[node name="Tile16" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 60)
visible = false

[node name="Tile17" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 60)
visible = false

[node name="Tile18" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 60)
visible = false

[node name="Tile19" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 60)
visible = false

[node name="Tile20" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 60)
visible = false

[node name="Tile21" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 80)
visible = false

[node name="Tile22" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 80)
visible = false

[node name="Tile23" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 40, 0, 80)
visible = false

[node name="Tile24" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 0, 80)
visible = false

[node name="Tile25" parent="Tiles" instance=ExtResource("2_wy7l3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 80, 0, 80)
visible = false

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -6.41421, 0, -3.58579)
script = ExtResource("4_4ivjp")
rotation_enabled = true
movement_enabled = true

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422619, 0, -0.422619, 0.906308, -7.15256e-07, 13.8432, 3.80357)
projection = 1
size = 30.0
near = 0.001

[node name="JobCarSpots" type="Node3D" parent="."]

[node name="JobCarSpot1" type="Marker3D" parent="JobCarSpots"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.1, 0.05, 4.3)
gizmo_extents = 2.0

[node name="JobCarSpot2" type="Marker3D" parent="JobCarSpots"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.1, 0.05, 9.3)
gizmo_extents = 2.0

[node name="JobCarSpot3" type="Marker3D" parent="JobCarSpots"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.1, 0.05, 14.3)
gizmo_extents = 2.0

[node name="JobCarSpot4" type="Marker3D" parent="JobCarSpots"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -3.1, 0.05, 19.3)
gizmo_extents = 2.0

[node name="CarLifts" type="Node3D" parent="." groups=["Holds Placeable Objects", "Persist"]]

[node name="CarLift" parent="CarLifts" instance=ExtResource("4_iop7i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 0, 2)
internal_name = "car_lift_001"

[node name="CarLift2" parent="CarLifts" instance=ExtResource("4_iop7i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 0, 5)
internal_name = "car_lift_001"

[node name="CarLift3" parent="CarLifts" instance=ExtResource("4_iop7i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 0, 8)
internal_name = "car_lift_001"

[node name="CarLift4" parent="CarLifts" instance=ExtResource("4_iop7i")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 17, 0, 11)
internal_name = "car_lift_001"

[node name="PlayerCars" type="Node3D" parent="." groups=["Holds Placeable Objects", "Persist", "Player Car Container"]]

[node name="Furniture" type="Node3D" parent="." groups=["Holds Placeable Objects", "Persist"]]

[node name="Walls" type="Node3D" parent="." groups=["Holds Placeable Objects", "Persist"]]

[node name="CameraStates" type="Node" parent="."]

[node name="DefaultState" type="Node3D" parent="CameraStates"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -6.41421, 0, -3.58579)
script = ExtResource("6_4fivs")

[node name="PlaceObjectState" type="Node3D" parent="CameraStates"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -6.41421, 0, -3.58579)
script = ExtResource("6_iriuf")

[node name="EditFloorTilesState" type="Node3D" parent="CameraStates"]
script = ExtResource("8_hispg")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
